adicionando correção no nome bikcraft

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <img class="apresentacao" src="./assets/img/bikecraft.png" alt="">
 
                 <div class="projeto__descricao">
-                   <a href="https://estudo-bikcraft-j2mumnunz-felipecarv.vercel.app/" target="_blank"><h1>Bike<span class="destaque">craft</span></h1></a>
+                   <a href="https://estudo-bikcraft-j2mumnunz-felipecarv.vercel.app/" target="_blank"><h1>Bik<span class="destaque">craft</span></h1></a>
                     <p>
                         Site desenvolvido para uma empresa ficticia chamada bikcraft. 
                         Esse projeto faz parte dos projetos do curso “origamid”.
