adicionando correção do gitHub

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     <div class="redes__sociais">
                         <ul>
-                            <li><a href="https://github.com/FelipeCarv" target="_blank"><img src="./assets/svg/github.svg" alt=""></a></li>
+                            <li><a href="https://github.com/oecarvalho" target="_blank"><img src="./assets/svg/github.svg" alt=""></a></li>
                             <li><a href="https://www.instagram.com/lipeh_c/" target="_blank"><img src="./assets/svg/insta.svg" alt=""></a></li>
                             <li><a href="https://www.behance.net/felipecarvalho11" target="_blank"><img src="./assets/svg/behance.svg" alt=""></a></li>
                             <li><a href="https://www.linkedin.com/in/felipe-carvalho-072895197/" target="_blank"><img src="./assets/svg/linkedin.svg" alt=""></a></li>
@@ -355,7 +355,7 @@
         
         <div class="redes__sociais">
             <ul>
-                <li><a href="https://github.com/FelipeCarv" target="_blank"><img src="./assets/svg/github.svg" alt=""></a></li>
+                <li><a href="https://github.com/oecarvalho" target="_blank"><img src="./assets/svg/github.svg" alt=""></a></li>
                 <li><a href="https://www.instagram.com/lipeh_c/" target="_blank"><img src="./assets/svg/insta.svg" alt=""></a></li>
                 <li><a href="https://www.behance.net/felipecarvalho11" target="_blank"><img src="./assets/svg/behance.svg" alt=""></a></li>
                 <li><a href="https://www.linkedin.com/in/felipe-carvalho-072895197/" target="_blank"><img src="./assets/svg/linkedin.svg" alt=""></a></li>
